# permission_tools

./: README.md  pyproject.toml
permission_tools/: api.py  hooks.py  modules.txt
permission_tools/permission_tools/page/permission_tools_manager/: permission_tools_manager.js  permission_tools_manager.json
